--- a/src/SConscript
+++ b/src/SConscript
@@ -4,10 +4,10 @@ os_bin_name = project_name.lower() + ".bin"
 subdirs = []
 
 #Bootstrap
-subdirs += ["bootstrap/SConscript"] #Bootstrap subdirectory
+subdirs += ["boot/SConscript"] #Bootstrap subdirectory
 subdirs += ["kernel/SConscript"] #Kernel subdirectory
-subdirs += ["library/SConscript"] #Libraries subdirectory
-subdirs += ["program/SConscript"] #Programs subdirectory
+subdirs += ["lib/SConscript"] #Libraries subdirectory
+subdirs += ["app/SConscript"] #Programs subdirectory
 
 SConscript(subdirs) #Perform subdirectory tasks
 
@@ -19,16 +19,14 @@ environment = Environment(CC = "i686-elf-gcc",
 kernel_objects = []
 
 #Bootstrap objects
-kernel_objects += Glob("bootstrap/*.o")
+kernel_objects += Glob("boot/*.o")
 
 #Kernel objects
 kernel_objects += Glob('kernel/*.o')
-kernel_objects += Glob('kernel/c/*.o')
-kernel_objects += Glob('kernel/terminal/*.o')
 kernel_objects += Glob('kernel/thoth/*.o')
 
 #Library objects
-kernel_objects += Glob('library/libstd/*.o')
+kernel_objects += Glob('lib/libc/*.o')
 
 
 #Link everything into the main kernel binary
