--- a/src/lib/libk/SConscript
+++ b/src/lib/libk/SConscript
@@ -2,7 +2,7 @@ import os
 
 environment = Environment(CC = "i686-elf-g++",
 						  CXX = "i686-elf-g++",
-						  CXXFLAGS = "-fpic -ffreestanding -std=gnu++11 -O2 -Wall",
+						  CXXFLAGS = "-DKERNEL_SPACE -fpic -ffreestanding -std=gnu++11 -O2 -Wall",
 						  OBJCOPY = "i686-elf-objcopy")
 
 source_files = []
