--- a/src/lib/libk/SConscript
+++ b/src/lib/libk/SConscript
@@ -3,6 +3,7 @@ import os
 environment = Environment(CC = "i686-elf-g++",
 						  CXX = "i686-elf-g++",
 						  CXXFLAGS = "-DKERNEL_SPACE -fpic -ffreestanding -std=gnu++11 -O2 -Wall",
+						  CFLAGS = "-DKERNEL_SPACE -fpic -ffreestanding -std=gnu++11 -O2 -Wall",
 						  OBJCOPY = "i686-elf-objcopy")
 
 source_files = []
