--- a/src/lib/libk/SConscript
+++ b/src/lib/libk/SConscript
@@ -1,10 +1,10 @@
 import os
 
-environment = Environment(CC = "i686-elf-g++",
-						  CXX = "i686-elf-g++",
-						  CXXFLAGS = "-DKERNEL_SPACE -fpic -ffreestanding -std=gnu++11 -O2 -Wall",
-						  CFLAGS = "-DKERNEL_SPACE -fpic -ffreestanding -std=gnu++11 -O2 -Wall",
-						  OBJCOPY = "i686-elf-objcopy")
+environment = Environment(CC = "x86_64-elf-g++",
+						  CXX = "x86_64-elf-g++",
+						  CXXFLAGS = "-DKERNEL_SPACE -fpic -ffreestanding -std=gnu++11 -O2 -Wall -mcmodel=large -mno-red-zone -mno-mmx -mno-sse -mno-sse2 -c",
+						  CFLAGS = "-DKERNEL_SPACE -fpic -ffreestanding -std=gnu++11 -O2 -Wall -mcmodel=large -mno-red-zone -mno-mmx -mno-sse -mno-sse2 -c",
+						  OBJCOPY = "x86_64-elf-objcopy")
 
 source_files = []
 include_dirs = []
