--- a/kernel/lib/SConscript
+++ b/kernel/lib/SConscript
@@ -8,5 +8,6 @@ subdirs = []
 subdirs += ["libc/SConscript"]
 subdirs += ["libcpp/SConscript"]
 subdirs += ["libthoth/SConscript"]
+subdirs += ["libkernel/SConscript"]
 
 SConscript(subdirs, exports = ["project_info", "kernel_build_environment"])
