Converted kernel 100% to C

--- a/kernel/SConscript
+++ b/kernel/SConscript
@@ -52,6 +52,7 @@ kernel_objects += Glob("lib/libthoth/*.o")
 kernel_objects += Glob("lib/libthoth/core/*.o")
 kernel_objects += Glob("lib/libthoth/io/*.o")
 kernel_objects += Glob("lib/libthoth/vga/*.o")
+kernel_objects += Glob("lib/libthoth/dmm/*.o")
 
 # Boot-related code
 
