--- a/kernel/lib/libthoth/SConscript
+++ b/kernel/lib/libthoth/SConscript
@@ -5,7 +5,8 @@ Import(["project_info", "kernel_build_environment"])
 
 source_files = []
 
-source_files += Glob("*.cpp")
+source_files += Glob("*.c")
+source_files += Glob("dmm/*.c")
 
 # Compile the source files
 
