--- a/kernel/lib/libkernel/SConscript
+++ b/kernel/lib/libkernel/SConscript
@@ -8,6 +8,7 @@ source_files = []
 source_files += Glob("*.c")
 source_files += Glob("vga/*.c")
 source_files += Glob("interrupt/*.c")
+source_files += Glob("interrupt/*.s")
 
 # Compile the source files
 
